--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
       with:
         # 来源仓库
-        source-repo: "git@github.com:tomato-tomato/tomato-tomato.github.io.git"
+        source-repo: "git@github.com:tomato-tomato/vrepress-blog.git"
         # 目标仓库
-        destination-repo: "git@gitee.com:potofmaocai/tomato-tomato.github.io.git"
+        destination-repo: "git@gitee.com:potofmaocai/vrepress-blog.git"
   reload-pages:
     needs: sync
     runs-on: ubuntu-latest
@@ -54,6 +54,6 @@ jobs:
           # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
-          gitee-repo: potofmaocai/tomato-tomato.github.io
+          gitee-repo: potofmaocai/vrepress-blog
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
           branch: gh_pages
