--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "lukeyan",
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.9.7",
     "vuepress": "^1.8.2",
     "vuepress-theme-reco": "^1.6.6"
   },
